# APA-optimizacao

./: .gitignore  CMakeLists.txt  README.md
programa/src/: main.cpp
programa/src/bodies/: FactoryPresent.cpp  GreedyAlgorithm.cpp  InputHandler.cpp  OutputHandler.cpp  Present.cpp  ProblemData.cpp  ProblemFactory.cpp  Sled.cpp  Solution.cpp  Treno.cpp  Vnd.cpp  fileNotFoundError.cpp  guloso.cpp
programa/src/headers/: FactoryPresent.h++  GreedyAlgorithm.h++  InputHandler.h++  OutputHandler.h++  Present.h++  ProblemData.h++  ProblemFactory.h++  Sled.h  Solution.h  Treno.h  Vnd.h  fileNotFoundError.h++  guloso.h++
